<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
  <!-- Title for Latin keyboard  -->
  <string name="app_version">1.3.1</string>
  <string name="ime_name">Wrap Keyboard 1.3.1</string>

  <!-- Symbols that are commonly considered word separators in this language -->
  <string name="word_separators">\u0020.,;:!?\n()[]*&amp;@{}/&lt;&gt;_+=|&quot;</string>
  
  <!-- Labels on soft keys -->
  <string name="label_go_key">Go</string>
  <string name="label_next_key">Next</string>
  <string name="label_send_key">Send</string>
  
  <string name="alternates_for_a">áàâãäāåąæα</string>
  <string name="alternates_for_b">β</string>
  <string name="alternates_for_c">çčćĉ¢</string>
  <string name="alternates_for_d">ðđδ</string>
  <string name="alternates_for_e">éèêëēęεη</string>
  <string name="alternates_for_f">φϕ₣</string>
  <string name="alternates_for_g">ģĝğγ</string>
  <string name="alternates_for_h">ĥ</string>
  <string name="alternates_for_i">íìîïīıįι</string>
  <string name="alternates_for_j">ĵ</string>
  <string name="alternates_for_k">ķκχ</string>
  <string name="alternates_for_l">łĺŁλ</string>
  <string name="alternates_for_m">μ</string>
  <string name="alternates_for_n">ñňńņν</string>
  <string name="alternates_for_o">óòöõôøοω</string>
  <string name="alternates_for_p">πψ</string>
  <string name="alternates_for_r">ŕřŗρ</string>
  <string name="alternates_for_s">ßšŝśşσς</string>
  <string name="alternates_for_t">țþÞθτ</string>
  <string name="alternates_for_u">úùüûūŭůυ</string>
  <string name="alternates_for_v">ʋʌṽṿ</string>
  <string name="alternates_for_w">ŵ</string>
  <string name="alternates_for_x">ξ</string>
  <string name="alternates_for_y">ýÿŷ</string>
  <string name="alternates_for_z">źžżζ</string>
  
  <string name="fr_alternates_for_a">àâæ</string>
  <string name="fr_alternates_for_c">ç</string>
  <string name="fr_alternates_for_e">éèêë</string>
  <string name="fr_alternates_for_i">ïî</string>
  <string name="fr_alternates_for_o">ôœ</string>
  <string name="fr_alternates_for_u">ùûü</string>
  <string name="fr_alternates_for_y">ÿ</string>
  
  <string name="de_alternates_for_a">ä</string>
  <string name="de_alternates_for_o">ö</string>
  <string name="de_alternates_for_s">ß</string>
  <string name="de_alternates_for_u">ü</string>
  
  <string name="it_alternates_for_a">à</string>
  <string name="it_alternates_for_e">èé</string>
  <string name="it_alternates_for_i">ì</string>
  <string name="it_alternates_for_o">òó</string>
  <string name="it_alternates_for_u">ù</string>
  
  <string name="es_alternates_for_a">á</string>
  <string name="es_alternates_for_e">é</string>
  <string name="es_alternates_for_i">í</string>
  <string name="es_alternates_for_n">ñ</string>
  <string name="es_alternates_for_o">ó</string>
  <string name="es_alternates_for_u">úü</string>
  
  <!-- Titles for ImePreference -->
  <string name="settings_name">Wrap Keyboard Settings</string>
  <string name="language_selection_title">Input languages</string>
  <string name="select_language">Select input languages</string>
  <string name="general_category">General</string>
  
  <string name="pref_cat_title_ext_keyboard_type">Extended Keyboard Family</string>

  <string name="pref_key_switch_keyboard_button">pref_key_switch_keyboard_button</string>
  <string name="pref_key_ext_type_none">pref_key_ext_type_none</string>
  <string name="pref_key_ext_type_all">pref_key_ext_type_all</string>
  <string name="pref_key_ext_type_french">pref_key_ext_type_french</string>
  <string name="pref_key_ext_type_german">pref_key_ext_type_german</string>
  <string name="pref_key_ext_type_italian">pref_key_ext_type_italian</string>
  <string name="pref_key_ext_type_spanish">pref_key_ext_type_spanish</string>
  
  <string name="pref_key_switch_keyboard_title">Switch Keyboard...</string>
  
  <string name="pref_title_ext_type_none">None</string>
  <string name="pref_title_ext_type_all">All</string>
  <string name="pref_title_ext_type_french">French</string>
  <string name="pref_title_ext_type_german">German</string>
  <string name="pref_title_ext_type_italian">Italian</string>
  <string name="pref_title_ext_type_spanish">Spanish</string>
  
  <string name="pref_default_ext_type_none">true</string>
  <string name="pref_default_ext_type_all">false</string>
  <string name="pref_default_ext_type_french">false</string>
  <string name="pref_default_ext_type_german">false</string>
  <string name="pref_default_ext_type_italian">false</string>
  <string name="pref_default_ext_type_spanish">false</string>
</resources>
