<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

  <PreferenceCategory android:title="@string/pref_cat_title_ext_keyboard_type">
    <org.mortalis.wrapkeyboardabc.settings.RadioButtonPreference
      android:key="@string/pref_key_ext_type_none"
      android:title="@string/pref_title_ext_type_none"
      android:defaultValue="@string/pref_default_ext_type_none"
      android:widgetLayout="@layout/preference_widget_radiobutton"
    />
    <org.mortalis.wrapkeyboardabc.settings.RadioButtonPreference
      android:key="@string/pref_key_ext_type_all"
      android:title="@string/pref_title_ext_type_all"
      android:defaultValue="@string/pref_default_ext_type_all"
      android:widgetLayout="@layout/preference_widget_radiobutton"
    />
    <org.mortalis.wrapkeyboardabc.settings.RadioButtonPreference
      android:key="@string/pref_key_ext_type_french"
      android:title="@string/pref_title_ext_type_french"
      android:defaultValue="@string/pref_default_ext_type_french"
      android:widgetLayout="@layout/preference_widget_radiobutton"
    />
    <org.mortalis.wrapkeyboardabc.settings.RadioButtonPreference
      android:key="@string/pref_key_ext_type_german"
      android:title="@string/pref_title_ext_type_german"
      android:defaultValue="@string/pref_default_ext_type_german"
      android:widgetLayout="@layout/preference_widget_radiobutton"
    />
    <org.mortalis.wrapkeyboardabc.settings.RadioButtonPreference
      android:key="@string/pref_key_ext_type_italian"
      android:title="@string/pref_title_ext_type_italian"
      android:defaultValue="@string/pref_default_ext_type_italian"
      android:widgetLayout="@layout/preference_widget_radiobutton"
    />
    <org.mortalis.wrapkeyboardabc.settings.RadioButtonPreference
      android:key="@string/pref_key_ext_type_spanish"
      android:title="@string/pref_title_ext_type_spanish"
      android:defaultValue="@string/pref_default_ext_type_spanish"
      android:widgetLayout="@layout/preference_widget_radiobutton"
    />
  </PreferenceCategory>
  
</PreferenceScreen>