<?xml version="1.0" encoding="utf-8"?>

<Keyboard xmlns:android="http://schemas.android.com/apk/res/android"
  android:keyWidth="12.5%p"
  android:keyHeight="@dimen/key_height"
  android:horizontalGap="0px"
  android:verticalGap="0px"
>
  <Row>
    <Key android:codes="97"  android:keyLabel="a" android:popupKeyboard="@xml/keyboard_popup_template"
      android:popupCharacters="@string/alternates_for_a" android:keyEdgeFlags="left"/>
    <Key android:codes="98"  android:keyLabel="b" android:popupKeyboard="@xml/keyboard_popup_template"
      android:popupCharacters="@string/alternates_for_b"/>
    <Key android:codes="99"  android:keyLabel="c" android:popupKeyboard="@xml/keyboard_popup_template"
      android:popupCharacters="@string/alternates_for_c"/>
    <Key android:codes="100" android:keyLabel="d" android:popupKeyboard="@xml/keyboard_popup_template"
      android:popupCharacters="@string/alternates_for_d"/>
    <Key android:codes="101" android:keyLabel="e" android:popupKeyboard="@xml/keyboard_popup_template"
      android:popupCharacters="@string/alternates_for_e"/>
    <Key android:codes="102" android:keyLabel="f" android:popupKeyboard="@xml/keyboard_popup_template"
      android:popupCharacters="@string/alternates_for_f"/>
    <Key android:codes="103" android:keyLabel="g" android:popupKeyboard="@xml/keyboard_popup_template"
      android:popupCharacters="@string/alternates_for_g"/>
    <Key android:codes="104" android:keyLabel="h" android:popupKeyboard="@xml/keyboard_popup_template"
      android:popupCharacters="@string/alternates_for_h" android:keyEdgeFlags="right" />
  </Row>

  <Row>
    <Key android:codes="105" android:keyLabel="i" android:popupKeyboard="@xml/keyboard_popup_template"
      android:popupCharacters="@string/alternates_for_i" android:keyEdgeFlags="left"/>
    <Key android:codes="106" android:keyLabel="j" android:popupKeyboard="@xml/keyboard_popup_template"
      android:popupCharacters="@string/alternates_for_j"/>
    <Key android:codes="107" android:keyLabel="k" android:popupKeyboard="@xml/keyboard_popup_template"
      android:popupCharacters="@string/alternates_for_k"/>
    <Key android:codes="108" android:keyLabel="l" android:popupKeyboard="@xml/keyboard_popup_template"
      android:popupCharacters="@string/alternates_for_l"/>
    <Key android:codes="109" android:keyLabel="m" android:popupKeyboard="@xml/keyboard_popup_template"
      android:popupCharacters="@string/alternates_for_m"/>
    <Key android:codes="110" android:keyLabel="n" android:popupKeyboard="@xml/keyboard_popup_template"
      android:popupCharacters="@string/alternates_for_n"/>
    <Key android:codes="111" android:keyLabel="o" android:popupKeyboard="@xml/keyboard_popup_template"
      android:popupCharacters="@string/alternates_for_o"/>
    <Key android:codes="112" android:keyLabel="p" android:popupKeyboard="@xml/keyboard_popup_template"
      android:popupCharacters="@string/alternates_for_p" android:keyEdgeFlags="right" />
  </Row>

  <Row>
    <Key android:codes="113" android:keyLabel="q" android:keyEdgeFlags="left"/>
    <Key android:codes="114" android:keyLabel="r" android:popupKeyboard="@xml/keyboard_popup_template"
      android:popupCharacters="@string/alternates_for_r"/>
    <Key android:codes="115" android:keyLabel="s" android:popupKeyboard="@xml/keyboard_popup_template"
      android:popupCharacters="@string/alternates_for_s"/>
    <Key android:codes="116" android:keyLabel="t" android:popupKeyboard="@xml/keyboard_popup_template"
      android:popupCharacters="@string/alternates_for_t"/>
    <Key android:codes="117" android:keyLabel="u" android:popupKeyboard="@xml/keyboard_popup_template"
      android:popupCharacters="@string/alternates_for_u"/>
    <Key android:codes="118" android:keyLabel="v" android:popupKeyboard="@xml/keyboard_popup_template"
      android:popupCharacters="@string/alternates_for_v"/>
    <Key android:codes="119" android:keyLabel="w" android:popupKeyboard="@xml/keyboard_popup_template"
      android:popupCharacters="@string/alternates_for_w"/>
    <Key android:codes="120" android:keyLabel="x" android:popupKeyboard="@xml/keyboard_popup_template"
      android:popupCharacters="@string/alternates_for_x" android:keyEdgeFlags="right" />
  </Row>

  <Row>
    <Key android:codes="-1" android:keyIcon="@drawable/sym_keyboard_shift" android:keyEdgeFlags="left" android:isModifier="true"/>
    <Key android:codes="121" android:keyLabel="y" android:popupKeyboard="@xml/keyboard_popup_template"
      android:popupCharacters="@string/alternates_for_y"/>
    <Key android:codes="122" android:keyLabel="z" android:popupKeyboard="@xml/keyboard_popup_template"
      android:popupCharacters="@string/alternates_for_z"/>
    <Key android:keyLabel="&amp;"/>
    <Key android:keyLabel="-"/>
    <Key android:keyLabel="?"/>
    <Key android:keyLabel="/"/>
    <Key android:codes="-5" android:keyIcon="@drawable/sym_keyboard_delete" android:keyEdgeFlags="right" android:isModifier="true" android:isRepeatable="true"/>
  </Row>

  <Row>
    <Key android:codes="-2" android:keyLabel="123" android:isModifier="true" android:keyEdgeFlags="left"/>
    <Key android:codes="55000" android:keyLabel="EN" android:isModifier="true"/>
    <Key android:keyLabel="_" android:isModifier="true"/>
    <Key android:codes="32" android:keyIcon="@drawable/sym_keyboard_space" android:keyWidth="25%p" android:isRepeatable="true" android:isModifier="true"/>
    <Key android:keyLabel="," android:isModifier="true"/>
    <Key android:keyLabel="." android:isModifier="true"/>
    <Key android:codes="10" android:keyIcon="@drawable/sym_keyboard_return" android:keyEdgeFlags="right" android:isModifier="true"/>
  </Row>

</Keyboard>
