<?xml version="1.0" encoding="utf-8"?>

<Keyboard xmlns:android="http://schemas.android.com/apk/res/android"
  android:keyWidth="12.5%p"
  android:keyHeight="@dimen/key_height"
  android:horizontalGap="0px"
  android:verticalGap="0px"
>
  <Row>
    <Key android:codes="97"  android:keyLabel="a" android:popupKeyboard="@xml/keyboard_popup_template"
      android:popupCharacters="@string/es_alternates_for_a" android:keyEdgeFlags="left"/>
    <Key android:codes="98"  android:keyLabel="b"/>
    <Key android:codes="99"  android:keyLabel="c"/>
    <Key android:codes="100" android:keyLabel="d"/>
    <Key android:codes="101" android:keyLabel="e" android:popupKeyboard="@xml/keyboard_popup_template"
      android:popupCharacters="@string/es_alternates_for_e"/>
    <Key android:codes="102" android:keyLabel="f"/>
    <Key android:codes="103" android:keyLabel="g"/>
    <Key android:codes="104" android:keyLabel="h" android:keyEdgeFlags="right" />
  </Row>

  <Row>
    <Key android:codes="105" android:keyLabel="i" android:popupKeyboard="@xml/keyboard_popup_template"
      android:popupCharacters="@string/es_alternates_for_i" android:keyEdgeFlags="left"/>
    <Key android:codes="106" android:keyLabel="j"/>
    <Key android:codes="107" android:keyLabel="k"/>
    <Key android:codes="108" android:keyLabel="l"/>
    <Key android:codes="109" android:keyLabel="m"/>
    <Key android:codes="110" android:keyLabel="n" android:popupKeyboard="@xml/keyboard_popup_template"
      android:popupCharacters="@string/es_alternates_for_n"/>
    <Key android:codes="111" android:keyLabel="o" android:popupKeyboard="@xml/keyboard_popup_template"
      android:popupCharacters="@string/es_alternates_for_o"/>
    <Key android:codes="112" android:keyLabel="p" android:keyEdgeFlags="right" />
  </Row>

  <Row>
    <Key android:codes="113" android:keyLabel="q" android:keyEdgeFlags="left"/>
    <Key android:codes="114" android:keyLabel="r"/>
    <Key android:codes="115" android:keyLabel="s"/>
    <Key android:codes="116" android:keyLabel="t"/>
    <Key android:codes="117" android:keyLabel="u" android:popupKeyboard="@xml/keyboard_popup_template"
      android:popupCharacters="@string/es_alternates_for_u"/>
    <Key android:codes="118" android:keyLabel="v"/>
    <Key android:codes="119" android:keyLabel="w"/>
    <Key android:codes="120" android:keyLabel="x" android:keyEdgeFlags="right" />
  </Row>

  <Row>
    <Key android:codes="-1" android:keyIcon="@drawable/sym_keyboard_shift" android:keyEdgeFlags="left" android:isModifier="true"/>
    <Key android:codes="121" android:keyLabel="y"/>
    <Key android:codes="122" android:keyLabel="z"/>
    <Key android:codes="43"  android:keyLabel="+"/>
    <Key android:codes="45"  android:keyLabel="-"/>
    <Key android:codes="42"  android:keyLabel="*"/>
    <Key android:codes="47"  android:keyLabel="/"/>
    <Key android:codes="-5" android:keyIcon="@drawable/sym_keyboard_delete" android:keyEdgeFlags="right" android:isModifier="true" android:isRepeatable="true"/>
  </Row>

  <Row>
    <Key android:codes="-2" android:keyLabel="123" android:isModifier="true" android:keyEdgeFlags="left"/>
    <Key android:codes="55000" android:keyLabel="ES" android:isModifier="true"/>
    <Key android:codes="95" android:keyLabel="_" android:isModifier="true"/>
    <Key android:codes="32" android:keyIcon="@drawable/sym_keyboard_space" android:keyWidth="25%p" android:isRepeatable="true" android:isModifier="true"/>
    <Key android:codes="44" android:keyLabel="," android:isModifier="true"/>
    <Key android:codes="46" android:keyLabel="." android:isModifier="true"/>
    <Key android:codes="10" android:keyIcon="@drawable/sym_keyboard_return" android:keyEdgeFlags="right" android:isModifier="true"/>
  </Row>

</Keyboard>
